--- a/Index.html
+++ b/Index.html
@@ -60,7 +60,7 @@
 
             <p class="noresults">
             </p>
-            <p class="noresults2">It might take a few seconds to load the database for your first search (depending on your internet connection)
+            <p class="noresults2">No Results
             </p>
 
             <table class="table" cellpadding="10">
@@ -77,13 +77,8 @@
               <tbody>
           </div>
         </div>
+       </div>
 
-      </div>
-    </div>
-
-
-
-    </div>
 
   </header>
 
