--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
             <table class="table" cellpadding="10">
               <thead>
                 <tr>
+                  <th scope="col">#</th>
                   <th scope="col">State</th>
                   <th scope="col">Zone</th>
                   <th scope="col">PrimaryRep</th>
